--- a/TestKheltskiV2DigitalChief/Dockerfile.txt
+++ b/TestKheltskiV2DigitalChief/Dockerfile.txt
@@ -1,4 +1,4 @@
 FROM openjdk:17-jdk
 WORKDIR /app
-COPY target/user-service-1.0-SNAPSHOT.jar app.jar
+COPY target/TestKheltskiV2DigitalChief-1.0-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
